Implement PATCH /persons/{personId} endpoint
